WebTransportError constructor mishandles single options argument and treats it as message https://bugs.webkit.org/show_bug.cgi?id=304996 rdar://167662230

Reviewed by Chris Dumez.

The WebTransportError constructor has two optional arguments of different types.
In order to be compatible with Chrome and wpt, I move the message to the dictionary
and make the constructor have only one parameter.

I proposed this to the spec in https://github.com/w3c/webtransport/issues/715

Test: fast/dom/construct-web-transport-error.html

* LayoutTests/fast/dom/construct-web-transport-error-expected.txt: Added.
* LayoutTests/fast/dom/construct-web-transport-error.html: Added.
* Source/WebCore/Modules/webtransport/WebTransport.cpp:
(WebCore::WebTransport::streamReceiveError):
(WebCore::WebTransport::streamSendError):
(WebCore::WebTransport::cleanupWithSessionError):
(WebCore::WebTransport::didFail):
* Source/WebCore/Modules/webtransport/WebTransportError.cpp:
(WebCore::WebTransportError::create):
(WebCore::WebTransportError::WebTransportError):
(WebCore::WebTransportError::source):
(WebCore::WebTransportError::streamErrorCode):
* Source/WebCore/Modules/webtransport/WebTransportError.h:
* Source/WebCore/Modules/webtransport/WebTransportError.idl:
* Source/WebCore/Modules/webtransport/WebTransportErrorOptions.h:
* Source/WebCore/Modules/webtransport/WebTransportErrorOptions.idl:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WebTransport.mm:
(TestWebKitAPI::TEST(WebTransport, ClientStreamAborts)):

Canonical link: https://commits.webkit.org/305306@main